Removed ExpandableCheckRecylerView project. There's no need for it.

--- a/Expandable/settings.gradle
+++ b/Expandable/settings.gradle
@@ -1,3 +1,2 @@
-include ':app', ':expandablerecyclerview', ':expandablecheckrecyclerview', ':categories'
+include ':app', ':expandablerecyclerview', ':categories'
 project(':expandablerecyclerview').projectDir = new File('expandable-recycler-view/expandablerecyclerview')
-project(':expandablecheckrecyclerview').projectDir = new File('expandable-recycler-view/expandablecheckrecyclerview')
